# CimIM

./: README.md  build.gradle  settings.gradle  sign.jks
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/libsecurity/: CMakeLists.txt  security.cpp
app/src/main/cpp/libspeex/: CMakeLists.txt  speex_jni.cpp
app/src/main/cpp/libudt/: CMakeLists.txt  udt_jni.cpp  udt_jni.h
app/src/main/res/drawable/: selector_mute_bg.xml  selector_speech_bg.xml  shape_clear_state_mark_bg.xml  shape_send_other_corner.xml  shape_speech_call_corner_0.xml  shape_speech_call_corner_1.xml  shape_speech_call_corner_2.xml  shape_speech_call_corner_3.xml  shape_speech_call_corner_4.xml  tt_login_btn.xml  tt_login_edittext_bg.xml  tt_message_send_btn.xml  tt_send_msg_edittext_bg.xml  tt_tab_bg.xml
app/src/main/res/layout/: activity_preview_message_location.xml  item_acty_location_detail.xml  tt_activity_base.xml  tt_activity_detail_portrait.xml  tt_activity_group_member_select.xml  tt_activity_groupmanage.xml  tt_activity_location_pick.xml  tt_activity_login.xml  tt_activity_main.xml  tt_activity_message.xml  tt_activity_preview.xml  tt_activity_preview_gif.xml  tt_fragment_activity_chat.xml  tt_fragment_activity_contact.xml  tt_fragment_activity_search.xml  tt_fragment_activity_setting.xml  tt_fragment_activity_userinfo.xml  tt_fragment_activity_webview.xml  tt_fragment_base.xml  tt_fragment_contact.xml  tt_fragment_group_manage.xml  tt_fragment_group_member_select.xml  tt_fragment_internal.xml  tt_fragment_my.xml  tt_fragment_setting.xml  tt_fragment_user_detail.xml  tt_group_manage_grid_item.xml  tt_item_chat.xml  tt_item_chat_group.xml  tt_item_contact.xml  tt_item_contact_group.xml  tt_message_title_time.xml  tt_mine_audio_message_item.xml  tt_mine_emoji_message_item.xml  tt_mine_gifimage_message_item.xml  tt_mine_image_message_item.xml  tt_mine_text_message_item.xml  tt_other_audio_message_item.xml  tt_other_emoji_message_item.xml  tt_other_gifimage_message_item.xml  (+5 more)
app/src/main/res/values/: tt_color.xml  tt_dimens.xml  tt_strings.xml  tt_strings_activity_contact.xml  tt_strings_activity_login.xml  (+2 more)
(+233 files in other folders)
