AUX_SOURCE_DIRECTORY(. SRC_LIST)

if(WIN32)
ADD_DEFINITIONS()
else()
ADD_DEFINITIONS( -g -W -Wall -D_REENTRANT -D_FILE_OFFSET_BITS=64 -DAC_HAS_INFO
-DAC_HAS_WARNING -DAC_HAS_ERROR -DAC_HAS_CRITICAL -DTIXML_USE_STL
-DAC_HAS_DEBUG -DLINUX_DAEMON -DSERVER)
endif()

INCLUDE_DIRECTORIES(. ${CMAKE_CURRENT_SOURCE_DIR}/../include/security)

ADD_LIBRARY(security SHARED ${SRC_LIST})

#TARGET_LINK_LIBRARIES(security) 
 
